fixed text alignment

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -97,8 +97,8 @@ header nav a:last-child {
 	height:auto;
 	margin-left: 12.5%;
 	margin-right: 12.5%;
-	margin-bottom: 12.5%;
-	margin-top: 12.5%;
+	margin-bottom: 6.25%;
+	margin-top: 6.25%;
 }
 
 #NujjReceipts > img,
@@ -143,7 +143,8 @@ header nav a:last-child {
 #NujjAccounts > img {
 	width:25%;
 	height:auto;
-	margin-bottom: 12.5%;
+	margin-bottom: 6.25%;
+	margin-top: 6.25%;
 }
 
 #NujjAccounts > img,
